Addedd core dir, with test and email repo

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
+local.properties
+build
+classes
+**/build
+.gradle
+**/.gradle
+.idea
+*.iml
+**/*.iml
+*.hprof
+
 # Compiled class file
 *.class
 
