--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,4 @@ kotlin.code.style=official
 android.useAndroidX=true
 kotlin.js.compiler=both
 org.gradle.jvmargs=-Xmx2024m -XX:MaxPermSize=512m
+org.gradle.parallel=false
