--- a/.github/workflows/hello.gradle.yml
+++ b/.github/workflows/hello.gradle.yml
@@ -18,7 +18,7 @@ jobs:
       with:
         java-version: 1.8
     - name: Cache Gradle
-    - uses: actions/cache@v2
+      uses: actions/cache@v2
       with:
         path: ~/.gradle/caches
         key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*') }}
