--- a/.github/workflows/bintray.gradle.yml
+++ b/.github/workflows/bintray.gradle.yml
@@ -1,4 +1,4 @@
-name: Say Hello
+name: Upload to Bintray
 
 on:
   push:
@@ -26,5 +26,8 @@ jobs:
           ${{ runner.os }}-gradle-
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
-    - name: Build with Gradle
+    - name: Upload to Bintray
+      env:
+        BINTRAY_USER: ${{ secrets.BINTRAY_USER }}
+        BINTRAY_KEY: ${{ sectrest.BINTRAY_KEY }}
       run: ./gradlew bintrayUpload
