--- a/.github/workflows/bintray.gradle.yml
+++ b/.github/workflows/bintray.gradle.yml
@@ -26,8 +26,8 @@ jobs:
             ${{ runner.os }}-gradle-
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
-      - name: Gradle Build
-        run: ./gradlew build
+      - name: Check Gradle
+        run: ./gradlew --version
       - name: Upload to Bintray
         env:
           BINTRAY_USER: ${{ secrets.BINTRAY_USER }}
