--- a/.github/workflows/space.maven.gradle.yml
+++ b/.github/workflows/space.maven.gradle.yml
@@ -1,4 +1,4 @@
-name: Upload to Bintray
+name: Upload to Space
 
 on:
   push:
@@ -26,9 +26,9 @@ jobs:
             ${{ runner.os }}-gradle-
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
-      - name: Check Gradle
-        run: ./gradlew --version
-      - name: Upload Gradle Plugins to Bintray
+      - name: Gradle Build
+        run: ./gradlew build
+      - name: Upload Gradle Plugins to Space
         env:
           SPACE_USERNAME: ${{ secrets.SPACE_USERNAME }}
           SPACE_PASSWORD: ${{ secrets.SPACE_PASSWORD }}
@@ -38,12 +38,12 @@ jobs:
           SPACE_USERNAME: ${{ secrets.SPACE_USERNAME }}
           SPACE_PASSWORD: ${{ secrets.SPACE_PASSWORD }}
         run: ./gradlew upload-primary
-      - name: Upload Secondary Libs to Bintray
+      - name: Upload Secondary Libs to Space
         env:
           SPACE_USERNAME: ${{ secrets.SPACE_USERNAME }}
           SPACE_PASSWORD: ${{ secrets.SPACE_PASSWORD }}
         run: ./gradlew upload-secondary
-      - name: Upload Tertiary Libs to Bintray
+      - name: Upload Tertiary Libs to Space
         env:
           SPACE_USERNAME: ${{ secrets.SPACE_USERNAME }}
           SPACE_PASSWORD: ${{ secrets.SPACE_PASSWORD }}
