--- a/.github/workflows/space.maven.gradle.yml
+++ b/.github/workflows/space.maven.gradle.yml
@@ -26,8 +26,8 @@ jobs:
             ${{ runner.os }}-gradle-
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
-      - name: Gradle Build
-        run: ./gradlew build
+      - name: Gradle Clean Build
+        run: ./gradlew clean build
       - name: Upload Gradle Plugins to Space
         env:
           SPACE_USERNAME: ${{ secrets.SPACE_USERNAME }}
