--- a/.github/workflows/space.maven.gradle.yml
+++ b/.github/workflows/space.maven.gradle.yml
@@ -26,6 +26,8 @@ jobs:
             ${{ runner.os }}-gradle-
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
+      - name: Debuging The Failing task
+        run: ./gradlew :primary:test:generateDebugResValues
       - name: Gradle Clean Build
         run: ./gradlew clean build
       - name: Upload Gradle Plugins to Space
