--- a/.github/workflows/space.maven.gradle.yml
+++ b/.github/workflows/space.maven.gradle.yml
@@ -26,10 +26,8 @@ jobs:
             ${{ runner.os }}-gradle-
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
-      - name: Debuging The Failing tasks
-        run: ./gradlew clean :primary:email:generateDebugResValues :primary:test:generateDebugResValues --stacktrace
-      - name: Gradle Clean Build
-        run: ./gradlew clean build
+      - name: Build Metadata, JVM and Js Jars
+        run: ./gradlew clean metadataJar jvmJar jsJar
       - name: Upload Gradle Plugins to Space
         env:
           SPACE_USERNAME: ${{ secrets.SPACE_USERNAME }}
