--- a/.github/workflows/space.maven.gradle.yml
+++ b/.github/workflows/space.maven.gradle.yml
@@ -26,6 +26,8 @@ jobs:
             ${{ runner.os }}-gradle-
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
+      - name: Build Metadata, JVM and JS Jars
+        run: ./gradlew metadataJar jvmJar jsJar
       - name: Upload Gradle Plugins to Space
         env:
           SPACE_USERNAME: ${{ secrets.SPACE_USERNAME }}
