Added javfx to container workflow

--- a/.github/workflows/space.maven.gradle.yml
+++ b/.github/workflows/space.maven.gradle.yml
@@ -24,6 +24,8 @@ jobs:
           key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*') }}
           restore-keys: |
             ${{ runner.os }}-gradle-
+      - name: Install JavaFX
+        run: sudo apt install openjfx
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
       - name: Build Metadata, JVM and JS Jars
