--- a/.github/workflows/space.maven.gradle.yml
+++ b/.github/workflows/space.maven.gradle.yml
@@ -17,6 +17,8 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 1.8
+      - name: Install JavaFX
+        run: sudo apt install openjfx
       - name: Cache Gradle
         uses: actions/cache@v2
         with:
@@ -24,10 +26,10 @@ jobs:
           key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*') }}
           restore-keys: |
             ${{ runner.os }}-gradle-
-      - name: Install JavaFX
-        run: sudo apt install openjfx
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
+      - name: Run UI jvmJar
+        run: ./gradlew :seconary:ui:jvmJar
       - name: Build Metadata, JVM and JS Jars
         run: ./gradlew metadataJar jvmJar jsJar
       - name: Upload Gradle Plugins to Space
