--- a/.github/workflows/space.maven.gradle.yml
+++ b/.github/workflows/space.maven.gradle.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
       - name: Run UI jvmJar
-        run: ./gradlew :seconary:ui:jvmJar
+        run: ./gradlew :secondary:ui:jvmJar
       - name: Build Metadata, JVM and JS Jars
         run: ./gradlew metadataJar jvmJar jsJar
       - name: Upload Gradle Plugins to Space
