--- a/.github/workflows/space.maven.gradle.yml
+++ b/.github/workflows/space.maven.gradle.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: flangknecht/javafx-maven-build-latest
 
     steps:
       - uses: actions/checkout@v2
@@ -17,8 +17,6 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 1.8
-      - name: Install JavaFX
-        run: sudo apt install openjfx
       - name: Cache Gradle
         uses: actions/cache@v2
         with:
