--- a/.github/workflows/space.maven.gradle.yml
+++ b/.github/workflows/space.maven.gradle.yml
@@ -30,6 +30,7 @@ jobs:
         run: ./gradlew sensitive-build
 
   primary:
+    runs-on: ubuntu-latest
     needs: build
     steps:
       - uses: actions/checkout@v2
@@ -53,6 +54,7 @@ jobs:
         run: ./gradlew upload-primary
 
   secondary:
+    runs-on: ubuntu-latest
     needs: build
     steps:
       - uses: actions/checkout@v2
@@ -75,6 +77,7 @@ jobs:
           SPACE_PASSWORD: ${{ secrets.SPACE_PASSWORD }}
         run: ./gradlew upload-secondary
   tertiary:
+    runs-on: ubuntu-latest
     needs: build
     steps:
       - uses: actions/checkout@v2
@@ -97,6 +100,7 @@ jobs:
           SPACE_PASSWORD: ${{ secrets.SPACE_PASSWORD }}
         run: ./gradlew upload-tertiary
   ui-libs:
+    runs-on: ubuntu-latest
     needs: builld
     steps:
       - uses: actions/checkout@v2
