--- a/.github/workflows/space.maven.gradle.yml
+++ b/.github/workflows/space.maven.gradle.yml
@@ -101,7 +101,7 @@ jobs:
         run: ./gradlew upload-tertiary
   ui-libs:
     runs-on: ubuntu-latest
-    needs: builld
+    needs: build
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 1.8
