--- a/.github/workflows/space.maven.gradle.yml
+++ b/.github/workflows/space.maven.gradle.yml
@@ -487,7 +487,7 @@ jobs:
           SPACE_PASSWORD: ${{ secrets.SPACE_PASSWORD }}
         working-directory: ./http
 
-  publish-auth:
+  publish-auth-core:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
