--- a/.github/workflows/space.maven.gradle.yml
+++ b/.github/workflows/space.maven.gradle.yml
@@ -487,7 +487,7 @@ jobs:
           SPACE_PASSWORD: ${{ secrets.SPACE_PASSWORD }}
         working-directory: ./firebase/firebase-storage
 
-  publish-firebase-dao:
+  publish-firestore-dao:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -509,7 +509,7 @@ jobs:
         env:
           SPACE_USERNAME: ${{ secrets.SPACE_USERNAME }}
           SPACE_PASSWORD: ${{ secrets.SPACE_PASSWORD }}
-        working-directory: ./daos/firebase-dao
+        working-directory: ./daos/firestore-dao
 
   publish-neo4j-dao:
     runs-on: ubuntu-latest
