--- a/.github/workflows/space.maven.gradle.yml
+++ b/.github/workflows/space.maven.gradle.yml
@@ -7,8 +7,33 @@ on:
     branches: [ master ]
 
 jobs:
+  build-all:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
+      - name: Cache Gradle
+        uses: actions/cache@v2
+        with:
+          path: ~/.gradle/caches
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-
+      - name: Publish
+        run: |
+          chmod +x build-all.sh
+          ./build-all.sh
+        env:
+          SPACE_USERNAME: ${{ secrets.SPACE_USERNAME }}
+          SPACE_PASSWORD: ${{ secrets.SPACE_PASSWORD }}
+        working-directory: .
+
   publish-build-src:
     runs-on: ubuntu-latest
+    needs: build-all
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 1.8
@@ -33,6 +58,7 @@ jobs:
 
   publish-tools-core:
     runs-on: ubuntu-latest
+    needs: build-all
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 1.8
@@ -57,6 +83,7 @@ jobs:
 
   publish-email:
     runs-on: ubuntu-latest
+    needs: build-all
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 1.8
@@ -81,6 +108,7 @@ jobs:
 
   publish-klock:
     runs-on: ubuntu-latest
+    needs: build-all
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 1.8
@@ -105,6 +133,7 @@ jobs:
 
   publish-io:
     runs-on: ubuntu-latest
+    needs: build-all
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 1.8
@@ -129,6 +158,7 @@ jobs:
 
   publish-krypto:
     runs-on: ubuntu-latest
+    needs: build-all
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 1.8
@@ -153,6 +183,7 @@ jobs:
 
   publish-persist:
     runs-on: ubuntu-latest
+    needs: build-all
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 1.8
@@ -177,6 +208,7 @@ jobs:
 
   publish-phone:
     runs-on: ubuntu-latest
+    needs: build-all
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 1.8
@@ -199,32 +231,9 @@ jobs:
           SPACE_PASSWORD: ${{ secrets.SPACE_PASSWORD }}
         working-directory: ./phone
 
-  publish-platform:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Set up JDK 1.8
-        uses: actions/setup-java@v1
-        with:
-          java-version: 1.8
-      - name: Cache Gradle
-        uses: actions/cache@v2
-        with:
-          path: ~/.gradle/caches
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*') }}
-          restore-keys: |
-            ${{ runner.os }}-gradle-
-      - name: Publish
-        run: |
-          chmod +x gradlew
-          ./gradlew :publish
-        env:
-          SPACE_USERNAME: ${{ secrets.SPACE_USERNAME }}
-          SPACE_PASSWORD: ${{ secrets.SPACE_PASSWORD }}
-        working-directory: ./platform
-
   publish-frontend:
     runs-on: ubuntu-latest
+    needs: build-all
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 1.8
@@ -249,6 +258,7 @@ jobs:
 
   publish-deployment:
     runs-on: ubuntu-latest
+    needs: build-all
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 1.8
@@ -273,6 +283,7 @@ jobs:
 
   publish-money:
     runs-on: ubuntu-latest
+    needs: build-all
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 1.8
@@ -297,6 +308,7 @@ jobs:
 
   publish-storage:
     runs-on: ubuntu-latest
+    needs: build-all
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 1.8
@@ -321,6 +333,7 @@ jobs:
 
   publish-logging:
     runs-on: ubuntu-latest
+    needs: build-all
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 1.8
@@ -345,6 +358,7 @@ jobs:
 
   publish-geo:
     runs-on: ubuntu-latest
+    needs: build-all
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 1.8
@@ -369,6 +383,7 @@ jobs:
 
   publish-http:
     runs-on: ubuntu-latest
+    needs: build-all
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 1.8
@@ -393,6 +408,7 @@ jobs:
 
   publish-firebase-core:
     runs-on: ubuntu-latest
+    needs: build-all
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 1.8
@@ -417,6 +433,7 @@ jobs:
 
   publish-firebase-auth:
     runs-on: ubuntu-latest
+    needs: build-all
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 1.8
@@ -441,6 +458,7 @@ jobs:
 
   publish-firebase-firestore:
     runs-on: ubuntu-latest
+    needs: build-all
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 1.8
@@ -465,6 +483,7 @@ jobs:
 
   publish-firebase-storage:
     runs-on: ubuntu-latest
+    needs: build-all
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 1.8
@@ -489,6 +508,7 @@ jobs:
 
   publish-firestore-dao:
     runs-on: ubuntu-latest
+    needs: build-all
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 1.8
@@ -513,6 +533,7 @@ jobs:
 
   publish-neo4j-dao:
     runs-on: ubuntu-latest
+    needs: build-all
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 1.8
@@ -537,6 +558,7 @@ jobs:
 
   publish-rest-dao:
     runs-on: ubuntu-latest
+    needs: build-all
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 1.8
@@ -561,6 +583,7 @@ jobs:
 
   publish-icons-react:
     runs-on: ubuntu-latest
+    needs: build-all
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 1.8
@@ -585,6 +608,7 @@ jobs:
 
   publish-theme-core:
     runs-on: ubuntu-latest
+    needs: build-all
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 1.8
@@ -609,6 +633,7 @@ jobs:
 
   publish-theme-react:
     runs-on: ubuntu-latest
+    needs: build-all
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 1.8
@@ -633,6 +658,7 @@ jobs:
 
   publish-viewmodel-core:
     runs-on: ubuntu-latest
+    needs: build-all
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 1.8
@@ -657,6 +683,7 @@ jobs:
 
   publish-viewmodel-react:
     runs-on: ubuntu-latest
+    needs: build-all
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 1.8
@@ -681,6 +708,7 @@ jobs:
 
   publish-enterprise-react:
     runs-on: ubuntu-latest
+    needs: build-all
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 1.8
@@ -705,6 +733,7 @@ jobs:
 
   publish-components-react:
     runs-on: ubuntu-latest
+    needs: build-all
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 1.8
@@ -729,6 +758,7 @@ jobs:
 
   publish-result:
     runs-on: ubuntu-latest
+    needs: build-all
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 1.8
@@ -753,6 +783,7 @@ jobs:
 
   publish-rest-controller-core:
     runs-on: ubuntu-latest
+    needs: build-all
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 1.8
@@ -777,6 +808,7 @@ jobs:
 
   publish-rest-controller-ktor:
     runs-on: ubuntu-latest
+    needs: build-all
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 1.8
@@ -801,6 +833,7 @@ jobs:
 
   publish-paging-core:
     runs-on: ubuntu-latest
+    needs: build-all
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 1.8
@@ -825,6 +858,7 @@ jobs:
 
   publish-paging-enterprise-react:
     runs-on: ubuntu-latest
+    needs: build-all
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 1.8
@@ -849,6 +883,7 @@ jobs:
 
   publish-tools-react:
     runs-on: ubuntu-latest
+    needs: build-all
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 1.8
@@ -873,6 +908,7 @@ jobs:
 
   publish-form-react:
     runs-on: ubuntu-latest
+    needs: build-all
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 1.8
@@ -897,6 +933,7 @@ jobs:
 
   publish-task:
     runs-on: ubuntu-latest
+    needs: build-all
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 1.8
