Observed upload rate

--- a/.github/workflows/space.maven.gradle.yml
+++ b/.github/workflows/space.maven.gradle.yml
@@ -25,323 +25,18 @@ jobs:
 
       - name: Building All
         run: |
-          chmod +x build-all.sh
+          chmod +x build.sh
           ./build.sh
         env:
           SPACE_USERNAME: ${{ secrets.SPACE_USERNAME }}
           SPACE_PASSWORD: ${{ secrets.SPACE_PASSWORD }}
         working-directory: .
 
-      - name: Publishing build-src
-        run: |
-          chmod +x gradlew
-          ./gradlew :publish
-        env:
-          SPACE_USERNAME: ${{ secrets.SPACE_USERNAME }}
-          SPACE_PASSWORD: ${{ secrets.SPACE_PASSWORD }}
-        working-directory: ./build-src
-
-      - name: Publishing tools
-        run: |
-          chmod +x publish.sh
-          ./publish
-        env:
-          SPACE_USERNAME: ${{ secrets.SPACE_USERNAME }}
-          SPACE_PASSWORD: ${{ secrets.SPACE_PASSWORD }}
-        working-directory: ./tools
-
-      - name: Publishing email
-        run: |
-          chmod +x gradlew
-          ./gradlew :publish
-        env:
-          SPACE_USERNAME: ${{ secrets.SPACE_USERNAME }}
-          SPACE_PASSWORD: ${{ secrets.SPACE_PASSWORD }}
-        working-directory: ./email
-
-      - name: Publish klock
-        run: |
-          chmod +x gradlew
-          ./gradlew :publish
-        env:
-          SPACE_USERNAME: ${{ secrets.SPACE_USERNAME }}
-          SPACE_PASSWORD: ${{ secrets.SPACE_PASSWORD }}
-        working-directory: ./klock
-
-      - name: Publish io
-        run: |
-          chmod +x gradlew
-          ./gradlew :publish
-        env:
-          SPACE_USERNAME: ${{ secrets.SPACE_USERNAME }}
-          SPACE_PASSWORD: ${{ secrets.SPACE_PASSWORD }}
-        working-directory: ./io
-
-      - name: Publish krypto
-        run: |
-          chmod +x gradlew
-          ./gradlew :publish
-        env:
-          SPACE_USERNAME: ${{ secrets.SPACE_USERNAME }}
-          SPACE_PASSWORD: ${{ secrets.SPACE_PASSWORD }}
-        working-directory: ./krypto
-
-      - name: Publish persist
-        run: |
-          chmod +x gradlew
-          ./gradlew :publish
-        env:
-          SPACE_USERNAME: ${{ secrets.SPACE_USERNAME }}
-          SPACE_PASSWORD: ${{ secrets.SPACE_PASSWORD }}
-        working-directory: ./persist
-
-      - name: Publish phone
-        run: |
-          chmod +x gradlew
-          ./gradlew :publish
-        env:
-          SPACE_USERNAME: ${{ secrets.SPACE_USERNAME }}
-          SPACE_PASSWORD: ${{ secrets.SPACE_PASSWORD }}
-        working-directory: ./phone
-
-      - name: Publish frontend
-        run: |
-          chmod +x gradlew
-          ./gradlew :publish
-        env:
-          SPACE_USERNAME: ${{ secrets.SPACE_USERNAME }}
-          SPACE_PASSWORD: ${{ secrets.SPACE_PASSWORD }}
-        working-directory: ./frontend
-
-      - name: Publish deployemtn
-        run: |
-          chmod +x gradlew
-          ./gradlew :publish
-        env:
-          SPACE_USERNAME: ${{ secrets.SPACE_USERNAME }}
-          SPACE_PASSWORD: ${{ secrets.SPACE_PASSWORD }}
-        working-directory: ./deployment
-
-      - name: Publish money
-        run: |
-          chmod +x gradlew
-          ./gradlew :publish
-        env:
-          SPACE_USERNAME: ${{ secrets.SPACE_USERNAME }}
-          SPACE_PASSWORD: ${{ secrets.SPACE_PASSWORD }}
-        working-directory: ./money
-
-      - name: Publish storage
-        run: |
-          chmod +x gradlew
-          ./gradlew :publish
-        env:
-          SPACE_USERNAME: ${{ secrets.SPACE_USERNAME }}
-          SPACE_PASSWORD: ${{ secrets.SPACE_PASSWORD }}
-        working-directory: ./storage
-
-      - name: Publish logging
-        run: |
-          chmod +x gradlew
-          ./gradlew :publish
-        env:
-          SPACE_USERNAME: ${{ secrets.SPACE_USERNAME }}
-          SPACE_PASSWORD: ${{ secrets.SPACE_PASSWORD }}
-        working-directory: ./logging
-
-      - name: Publish geo
-        run: |
-          chmod +x gradlew
-          ./gradlew :publish
-        env:
-          SPACE_USERNAME: ${{ secrets.SPACE_USERNAME }}
-          SPACE_PASSWORD: ${{ secrets.SPACE_PASSWORD }}
-        working-directory: ./geo
-
-      - name: Publish http
-        run: |
-          chmod +x gradlew
-          ./gradlew :publish
-        env:
-          SPACE_USERNAME: ${{ secrets.SPACE_USERNAME }}
-          SPACE_PASSWORD: ${{ secrets.SPACE_PASSWORD }}
-        working-directory: ./http
-
-      - name: Publish firebase core
-        run: |
-          chmod +x gradlew
-          ./gradlew :publish
-        env:
-          SPACE_USERNAME: ${{ secrets.SPACE_USERNAME }}
-          SPACE_PASSWORD: ${{ secrets.SPACE_PASSWORD }}
-        working-directory: ./firebase/firebase-core
-
-      - name: Publish firebase auth
-        run: |
-          chmod +x gradlew
-          ./gradlew :publish
-        env:
-          SPACE_USERNAME: ${{ secrets.SPACE_USERNAME }}
-          SPACE_PASSWORD: ${{ secrets.SPACE_PASSWORD }}
-        working-directory: ./firebase/firebase-auth
-
-      - name: Publish firebase firestore
-        run: |
-          chmod +x gradlew
-          ./gradlew :publish
-        env:
-          SPACE_USERNAME: ${{ secrets.SPACE_USERNAME }}
-          SPACE_PASSWORD: ${{ secrets.SPACE_PASSWORD }}
-        working-directory: ./firebase/firebase-firestore
-
-      - name: Publish firebase storage
-        run: |
-          chmod +x gradlew
-          ./gradlew :publish
-        env:
-          SPACE_USERNAME: ${{ secrets.SPACE_USERNAME }}
-          SPACE_PASSWORD: ${{ secrets.SPACE_PASSWORD }}
-        working-directory: ./firebase/firebase-storage
-
-      - name: Publish firestore dao
-        run: |
-          chmod +x gradlew
-          ./gradlew :publish
-        env:
-          SPACE_USERNAME: ${{ secrets.SPACE_USERNAME }}
-          SPACE_PASSWORD: ${{ secrets.SPACE_PASSWORD }}
-        working-directory: ./daos/firestore-dao
-
-      - name: Publish neo4j dao
-        run: |
-          chmod +x gradlew
-          ./gradlew :publish
-        env:
-          SPACE_USERNAME: ${{ secrets.SPACE_USERNAME }}
-          SPACE_PASSWORD: ${{ secrets.SPACE_PASSWORD }}
-        working-directory: ./daos/neo4j-dao
-
-      - name: Publish rest dao
-        run: |
-          chmod +x gradlew
-          ./gradlew :publish
-        env:
-          SPACE_USERNAME: ${{ secrets.SPACE_USERNAME }}
-          SPACE_PASSWORD: ${{ secrets.SPACE_PASSWORD }}
-        working-directory: ./daos/rest-dao
-
-      - name: Publish icons
-        run: |
-          chmod +x publish.sh
-        env:
-          SPACE_USERNAME: ${{ secrets.SPACE_USERNAME }}
-          SPACE_PASSWORD: ${{ secrets.SPACE_PASSWORD }}
-        working-directory: ./icons
-
-      - name: Publish theme-core
-        run: |
-          chmod +x gradlew
-          ./gradlew :publish
-        env:
-          SPACE_USERNAME: ${{ secrets.SPACE_USERNAME }}
-          SPACE_PASSWORD: ${{ secrets.SPACE_PASSWORD }}
-        working-directory: ./theme/theme-core
-
-      - name: Publish theme-react
-        run: |
-          chmod +x gradlew
-          ./gradlew :publish
-        env:
-          SPACE_USERNAME: ${{ secrets.SPACE_USERNAME }}
-          SPACE_PASSWORD: ${{ secrets.SPACE_PASSWORD }}
-        working-directory: ./theme/theme-react
-
-      - name: Publish viewmodel
+      - name: Publishing Publish All
         run: |
           chmod +x publish.sh
           ./publish.sh
         env:
           SPACE_USERNAME: ${{ secrets.SPACE_USERNAME }}
           SPACE_PASSWORD: ${{ secrets.SPACE_PASSWORD }}
-        working-directory: ./viewmodel
-
-      - name: Publish enterprise-react
-        run: |
-          chmod +x gradlew
-          ./gradlew :publish
-        env:
-          SPACE_USERNAME: ${{ secrets.SPACE_USERNAME }}
-          SPACE_PASSWORD: ${{ secrets.SPACE_PASSWORD }}
-        working-directory: ./enterprise/enterprise-react
-
-      - name: Publish components
-        run: |
-          chmod +x publish.sh
-          ./publish.sh
-        env:
-          SPACE_USERNAME: ${{ secrets.SPACE_USERNAME }}
-          SPACE_PASSWORD: ${{ secrets.SPACE_PASSWORD }}
-        working-directory: ./components
-
-      - name: Publish result
-        run: |
-          chmod +x gradlew
-          ./gradlew :publish
-        env:
-          SPACE_USERNAME: ${{ secrets.SPACE_USERNAME }}
-          SPACE_PASSWORD: ${{ secrets.SPACE_PASSWORD }}
-        working-directory: ./result
-
-      - name: Publish rest-controller
-        run: |
-          chmod +x gradlew
-          ./gradlew :publish
-        env:
-          SPACE_USERNAME: ${{ secrets.SPACE_USERNAME }}
-          SPACE_PASSWORD: ${{ secrets.SPACE_PASSWORD }}
-        working-directory: ./rest-controller/rest-controller-core
-
-      - name: Publish rest-controller-ktor
-        run: |
-          chmod +x gradlew
-          ./gradlew :publish
-        env:
-          SPACE_USERNAME: ${{ secrets.SPACE_USERNAME }}
-          SPACE_PASSWORD: ${{ secrets.SPACE_PASSWORD }}
-        working-directory: ./rest-controller/rest-controller-ktor
-
-      - name: Publish paging-core
-        run: |
-          chmod +x gradlew
-          ./gradlew :publish
-        env:
-          SPACE_USERNAME: ${{ secrets.SPACE_USERNAME }}
-          SPACE_PASSWORD: ${{ secrets.SPACE_PASSWORD }}
-        working-directory: ./paging/paging-core
-
-      - name: publish-paging-enterprise-react
-        run: |
-          chmod +x gradlew
-          ./gradlew :publish
-        env:
-          SPACE_USERNAME: ${{ secrets.SPACE_USERNAME }}
-          SPACE_PASSWORD: ${{ secrets.SPACE_PASSWORD }}
-        working-directory: ./paging/paging-enterprise-react
-
-      - name: Publish form-react
-        run: |
-          chmod +x gradlew
-          ./gradlew :publish
-        env:
-          SPACE_USERNAME: ${{ secrets.SPACE_USERNAME }}
-          SPACE_PASSWORD: ${{ secrets.SPACE_PASSWORD }}
-        working-directory: ./form/form-react
-
-      - name: Publish task
-        run: |
-          chmod +x gradlew
-          ./gradlew :publish
-        env:
-          SPACE_USERNAME: ${{ secrets.SPACE_USERNAME }}
-          SPACE_PASSWORD: ${{ secrets.SPACE_PASSWORD }}
-        working-directory: ./task
+        working-directory: .
