--- a/daos/inmemory-dao/src/androidMain/AndroidManifest.xml
+++ b/daos/inmemory-dao/src/androidMain/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="tz.co.asoft.daos.firestore">
+    package="tz.co.asoft.daos.inmemory">
+
     <uses-permission android:name="android.permission.INTERNET" />
 </manifest>
